--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:14-alpine 
-WORKDIR /
-EXPOSE 3001
+WORKDIR /app
 ADD node_modules.tar.gz ./
-COPY . ./
-RUN npm start
+COPY . .
+EXPOSE 3001
 CMD [ "npm", "start" ]
