--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:14-alpine 
-WORKDIR /
+WORKDIR /app
 EXPOSE 3000
 ADD node_modules.tar.gz ./
-COPY . ./
-RUN npm start
+COPY . .
 CMD [ "npm", "start" ]
